--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -20,6 +21,7 @@
     "tslint": "^6.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.7.0",
@@ -32,6 +34,7 @@
     "husky": "^4.2.3",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "ts-node": "^8.8.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
@@ -49,7 +52,7 @@
     "hooks": {
       "pre-commit": "npm run prettier:write"
     }
- },
+  },
   "author": "",
   "license": "ISC"
 }
