--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/mongoose-autopopulate": "^0.10.0",
     "@types/mongoose-unique-validator": "^1.0.3",
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
@@ -15,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
+    "mongoose-autopopulate": "^0.12.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "sequelize": "^5.21.3",
