--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,28 @@
   "main": "index.js",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose-autopopulate": "^0.10.0",
     "@types/mongoose-unique-validator": "^1.0.3",
+    "@types/passport": "^1.0.3",
+    "@types/passport-github": "^1.1.5",
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "mongoose-autopopulate": "^0.12.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.3",
     "tslint": "^6.1.1"
   },
