--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "extends": "react-app"
   },
   "keywords": [],
-  "author": "Aerolab",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
