--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: "3"
 
 services: 
     web:
-        build: ./
+        build: ./client
+        ports:
+            - 3000:3000
+    api:
+        build: ./server
         ports:
             - 5000:5000
         links:
